--- a/ApexAPI/ApexLegendsAPI.csproj
+++ b/ApexAPI/ApexLegendsAPI.csproj
@@ -9,7 +9,7 @@
     <RepositoryUrl>https://github.com/JaydenMaalouf/ApexAPI/</RepositoryUrl>
     <PackageTags>Apex, Legends, API, Wrapper</PackageTags>
     <PackageReleaseNotes>Initial Release</PackageReleaseNotes>
-    <Description>An unofficial .NET API Wrapper for the Fortnite API (https://apextab.com)</Description>
+    <Description>An unofficial .NET API Wrapper for the ApexTab API (https://apextab.com)</Description>
     <AssemblyVersion>1.0.2.0</AssemblyVersion>
     <FileVersion>1.0.2.0</FileVersion>
     <Version>1.0.2</Version>
