--- a/ApexAPI/ApexLegendsAPI.csproj
+++ b/ApexAPI/ApexLegendsAPI.csproj
@@ -8,7 +8,7 @@
     <PackageProjectUrl>https://github.com/JaydenMaalouf/ApexAPI/</PackageProjectUrl>
     <RepositoryUrl>https://github.com/JaydenMaalouf/ApexAPI/</RepositoryUrl>
     <PackageTags>Apex, Legends, API, Wrapper</PackageTags>
-    <PackageReleaseNotes>Initial Release</PackageReleaseNotes>
+    <PackageReleaseNotes></PackageReleaseNotes>
     <Description>An unofficial .NET API Wrapper for the ApexTab API (https://apextab.com)</Description>
     <AssemblyVersion>1.0.2.0</AssemblyVersion>
     <FileVersion>1.0.2.0</FileVersion>
