--- a/ApexAPI/ApexLegendsAPI.csproj
+++ b/ApexAPI/ApexLegendsAPI.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>ApexAPI</AssemblyName>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageLicenseUrl>https://github.com/JaydenMaalouf/ApexAPI/blob/master/LICENSE.md</PackageLicenseUrl>
+    <PackageLicenseUrl>https://github.com/JaydenMaalouf/ApexAPI/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/JaydenMaalouf/ApexAPI/</PackageProjectUrl>
     <RepositoryUrl>https://github.com/JaydenMaalouf/ApexAPI/</RepositoryUrl>
     <PackageTags>Apex, Legends, API, Wrapper</PackageTags>
